fixed header overflow in small screens by dicresing h1 and btn padding

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -470,4 +470,11 @@ footer .social-media a {
   header .product-img > img {
     margin-top: 0px;
   }
+  .description h1 {
+    margin-top: 0px;
+  }
+  .description .buttons a {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important ;
+  }
 }
